frontend/assets/css/style.css
body {
  color: #000;
  overflow-x: hidden;
  height: 100%;
  background-color: #fff;
  background-repeat: no-repeat;
}

a {
  text-decoration: none;
}

h1 {
  font-family: Staatliches;
  font-size: 120px;
}

#category {
  font-family: Staatliches;
  font-weight: 500;
}

#title {
  letter-spacing: 0.4px;
  font-size: 22px;
  font-size: 1.375rem;
  line-height: 1.13636;
}

#banner {
  margin: 20px;
  height: 800px;
}

#editor {
  font-size: 16px;
  font-size: 1rem;
  line-height: 1.75;
}

.uk-navbar-container {
  background: #fff !important;
  font-family: Staatliches;
}

img:hover {
  opacity: 1;
  transition: opacity 0.25s cubic-bezier(0.39, 0.575, 0.565, 1);
}

.DropdownMenu {
  min-width: 900px !important;
}

.cart {
  color: #101622;
}

.product-page-bg {
  background-color: #f9f9f9;
}

.sm-font {
  font-size: 12px;
}

.cartProductCard {
  background-color: black;
  color: #fff;
  padding: 6px;
  width: 100%;
  margin-right: 2%;
  border: 2px solid #26a69a;
  cursor: pointer;
}

.cartProductCard:hover {
  background-color: #00796b;
}

.order {
  color: #26a69a;
  padding: 6px 5px;
  width: 48%;
  margin-left: 2%;
  border: 2px solid #26a69a;
  cursor: pointer;
}

.order:hover {
  color: #fff;
  background-color: #00796b;
}

.vl {
  border-left: 2px solid black;
  height: 20px;
}

{/* ProductGrid*/}
.productgridFav {
  position: absolute;
  top: 10px;
  color: #757575;
  font-weight: bold;
  background-color: #eeeeee;
  padding: 7px;
  border-radius: 50%;
}
.productgridFav-Checked {
  color: #e53935;
}
.productgridFav:hover {
  color: #e53935;
  cursor: pointer;
}



.pic1 {
  width: 250px; /* 90% */
  height: 250px; /* null */
  margin-left: auto;
  margin-right: auto;
  display: block;
}

.product-pic {
  padding-left: auto;
  padding-right: auto;
  width: 100%;
}

.card {
  margin: auto;
  padding: 20px;
  border-radius: 15px;
  margin-top: 50px;
  margin-bottom: 50px;
}

.card-1 {
  padding: 30px 30px 20px 30px !important;
  border: none;
  height: 35rem;
  width: 20rem;
}

.category {
  padding-top: 25px;
  color: grey;
}

.product-name {
  padding-bottom: 15px;
  font-family: Florence;
  font-weight: bold;
}
{/* ProductGrid*/}

.price {
  font-size: 18px;
}

.sm-text {
font-size: 14px
}



.book,
.book-img {
    width: 120px;
    height: 180px;
    border-radius: 5px
}

.book {
    margin: 20px 15px 5px 15px
}

.rc-menu-root {
    background-color: white;
}
.rc-menu-submenu{
    background-color: white;
}

/* Frontpage Horizontal line */
.horizontal-line1 {
    width: 100%;
    text-align: center;
    border-bottom: 1px solid #000000;
    line-height: 0.1em;
    margin: 10px 0 20px;
}

.horizontal-line2 {
    background:#ffffff;
    padding:0 10px;
}

a.carousel-control-next, a.carousel-control-prev {
    position: absolute;
    top: 40%;
    width: 10%;
    height: 20%;
}

.marquee-container{
    white-space: nowrap;
    display: flex;
    flex-direction: row;

}
/* NAVBAR*/

.nav, ul {
    list-style: none;
    padding-left: 0;
}

.nav__menu {
    font-weight: 700;
    text-transform: uppercase;
    list-style: none;
}

.nav__menu-item {
    display: inline-block;
    position: relative;
    margin-left: 20px;

}
.nav__menu-item:hover {
    text-decoration: underline;
}

.nav__menu-item:hover .nav__submenu {
    display: block;
}


/* submenu*/
.nav__submenu {
    font-weight: 300;
    text-transform: none;
    display: none;
    position: absolute;
    width: 70vw;
    height: 83vh;
    background-color: lightgrey;
    text-align: center;
}


/* submenu items hover */
.nav_submenu-item:hover {
    cursor: pointer;
    background: greenyellow;
    text-decoration: underline;
}
.nav-container {
    /*z-index: 10; */
    position: relative;
}

/* HAMBURGER MENY RELATED */
.myImg {
    margin: 4px 30px 0px 10px;
    float: left;
    height: 35px;
    width: 35px;
    border-radius: 50%;
}

/* END OF NAVBAR*/


/* Kategory nav bar */
.tabbable .nav-tabs .navbarKat {
  overflow-x: auto;
  overflow-y:hidden;
  flex-wrap: nowrap;
}
div.scrollmenu {
  background-color: #333;
  overflow: auto;
  white-space: nowrap;
  text-align: center;
}

.navitem{

  display: inline-block;
  color: white;
  text-align: center;
  padding: 14px;
  text-decoration: none;
}
.navitem:hover {
  background-color: #777;
}

.imageSize{
  width: 6em;

}
.frontpageIconsText{
  text-align: center;
}

.featured-article {

	height: 50em;
	position: relative;
	margin-bottom: 1em;
}

.btn-circle.btn-sm {
  width: 12em;
  height: 12em;
  border-radius: 60px;
  font-size: 8px;
  text-align: center;


}

/* ArticleBoxes.jsx*/
.article_container {
    position: relative;
    width: 100%;
    max-width: 400px;
}

.article_container img {
    width: 100%;
    height: auto;
}

.article_container .btn {
    position: absolute;
    top: 80%;
    left: 50%;
    transform: translate(-50%, -50%);
    -ms-transform: translate(-50%, -50%);
    background-color: teal;
    color: white;
    font-size: 14px;
    padding: 7px 45px;
    border: none;
    cursor: pointer;
    border-radius: 5px;
    text-align: center;
    text-transform: uppercase;
}

.article_container .btn:hover {
    background-color: darkcyan;
    color: white;
}

.outlined_btn {
    position: absolute;
    top: 80%;
    left: 50%;
    text-transform: uppercase;
    transform: translate(-50%, -50%);
    -ms-transform: translate(-50%, -50%);
}

.btn-outline-secondary {
    position: absolute;
    top: 80%;
    left: 70%;
    transform: translate( -70%, -30% );
    text-transform: uppercase;
    border: 2px solid teal !important;
    color: black !important;
}

.btn-outline-secondary:hover {
    background-color: darkcyan !important;
    color: white !important;
}

.text-block {
    position: absolute;
    top: 40%;
    left: 70%;
    transform: translate( -70%, -50% );
    text-align: right;
    color: black;
    font-size: 12px;
}

